<resources>
    <string name="app_name">MPOS Ingenico</string>
    <string name="action_settings">Configuración</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="nav_item_home">Inicio</string>
    <string name="nav_item_historial">Historial</string>
    <string name="nav_item_perfil">Perfil</string>
    <string name="nav_item_soporte">Soporte</string>
    <string name="nav_item_cerrar_sesion">Cerrar Sesión</string>
    <string name="title_activity_splash_screen">MPM Flap</string>
    <string name="title_messages">Cerrar Sesión</string>
    <string name="title_friends">Perfil</string>
    <string name="title_home">Inicio</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>
    <string name="register">Registrarse ></string>
    <string name="ingresar_monto">Dar clic para ingresar monto</string>
    <string name="mail_tarj">Mail Tarjetahabiente (opcional)</string>
    <string name="a_error">Ha ocurrido un error </string>
    <string name="verif_tarj">Favor de verificar su tarjeta</string>
    <string name="intr_dat">usuario y/o password incorrectos.</string>
    <string name="noTrans">No. de Transacción</string>
    <string name="concepto">Concepto</string>
    <string name="printing">Procesando...</string>
    <string name="please_wait">Por favor espere</string>
    <string name="waiting_for_card">Por favor  inserte/deslice la tarjeta.</string>
    <string name="no_card_detected">No se detectó ninguna tarjeta. Lea nuevamente la tarjeta.</string>
    <string name="icc_card_inserted">Tarjeta con Chip Detectada.</string>
    <string name="card_inserted">Tarjeta Insertada (Sin Chip)</string>
    <string name="bad_swipe">Delizado incorrecto. Lea y deslice nuevamente la tarjeta.</string>
    <string name="card_swiped">Tarjeta Deslizada: </string>
    <string name="mag_head_fail">Falló Banda Magnetica</string>
    <string name="card_no_response">La lectura de tarjeta ha fallado, por favor retire la tarjeta.</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
    <string name="use_icc_card">Please use ICC card</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="uid">UID:</string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="card_data">Card Data: </string>
    <string name="start_emv_fail">Start EMV failed</string>
    <string name="start_emv_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery Level: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Detalles de Transacción</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="online_process_requested">Online process requested.</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Seleccione el Tipo de Tarjeta</string>
    <string name="transaction_result">Resultado de Transacción</string>
    <string name="transaction_approved">Aprobado</string>
    <string name="transaction_terminated">Terminado</string>
    <string name="transaction_declined">Declinado</string>
    <string name="transaction_cancel">Cancelar</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_app_fail">Fail (App fail)</string>
    <string name="transaction_device_error">Device Error</string>
    <string name="tlv_list">TLV List:\n</string>
    <string name="advice_process">Advice Process.</string>
    <string name="call_your_bank">Please call your bank</string>
    <string name="request_terminal_time">Request Terminal Time. Replied </string>
    <string name="confirm_amount">Confirme Monto</string>
    <string name="amount">Monto</string>
    <string name="amount_ok">Monto correcto?</string>
    <string name="approved">Aprovado</string>
    <string name="cancel_or_enter">Cancel or Enter</string>
    <string name="card_error">Card error</string>
    <string name="declined">Declinado</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="insert_card">Please insert card</string>
    <string name="not_accepted">Not accepted</string>
    <string name="pin_ok">PIN OK</string>
    <string name="wait">Por favor espere&#8230;</string>
    <string name="processing_error">Processing error</string>
    <string name="remove_card">Por favor retire la tarjeta</string>
    <string name="use_chip_reader">Please use chip reader</string>
    <string name="use_mag_stripe">Please use mag stripe</string>
    <string name="try_again">Please try again</string>
    <string name="refer_payment_device">Please refer to your payment device</string>
    <string name="try_another_interface">Please try another interface</string>
    <string name="online_required">Online required</string>
    <string name="processing">Processing&#8230;</string>
    <string name="welcome">Welcome</string>
    <string name="present_one_card">Please present only one card</string>
    <string name="capk_failed">CAPK loading failed</string>
    <string name="last_pin_try">Last PIN try</string>
    <string name="battery_low">Bateria baja, favor de cargar</string>
    <string name="battery_critically_low">Device battery critically low and powered off</string>
    <string name="no_device_detected">No hay dispositivos conectados.</string>
    <string name="device_plugged">Seleccione "Pagar"</string>
    <string name="device_unplugged">Dispositivo Desconectado.</string>
    <string name="command_not_available">Command not available</string>
    <string name="device_no_response">El dispositivo no responde</string>
    <string name="device_reset">Device reset</string>
    <string name="unknown_error">Unknown error</string>
    <string name="device_busy">Dispositivo Ocupado</string>
    <string name="out_of_range">Input out of range.</string>
    <string name="invalid_format">Input invalid format.</string>
    <string name="zero_values">Input are zero values.</string>
    <string name="input_invalid">Input invalid.</string>
    <string name="cashback_not_supported">Cashback not supported.</string>
    <string name="crc_error">CRC Error.</string>
    <string name="comm_error">Communication Error.</string>
    <string name="device_off">Device powered off.</string>
    <string name="get_info">Get Device Info</string>
    <string name="clear_log">Clear Log</string>
    <string name="check_card">Leer Tarjeta</string>
    <string name="start_emv">Start EMV</string>
    <string name="cancel">Cancelar</string>
    <string name="pin">PIN</string>
    <string name="cashback_amount">Cashback</string>
    <string name="orden">Orden</string>
    <string name="confirm">Confirmar</string>
    <string name="finalizar">Continuar</string>
    <string name="regresar">Regresar</string>
    <string name="bypass">Bypass</string>
    <string name="decline">Declinado</string>
    <string name="getting_info">Getting device info&#8230;</string>
    <string name="starting">Inicializando&#8230;</string>
    <string name="power_on_icc">Power on ICC</string>
    <string name="power_off_icc">Power off ICC</string>
    <string name="send_apdu">Send APDU</string>
    <string name="power_on_icc_success">Power on ICC Success</string>
    <string name="power_on_icc_failed">Power on ICC Failed</string>
    <string name="power_off_icc_success">Power off ICC Success</string>
    <string name="power_off_icc_failed">Power off ICC Failed</string>
    <string name="apdu_result">APDU Result:</string>
    <string name="atr">ATR:</string>
    <string name="apdu_failed">APDU Failed</string>
    <string name="sending">Sending:</string>
    <string name="atr_length">ATR Length:</string>
    <string name="get_ksn">Get KSN</string>
    <string name="getting_ksn">Getting KSN&#8230;</string>
    <string name="powering_on_icc">Powering on ICC&#8230;</string>
    <string name="powering_off_icc">Powering off ICC&#8230;</string>
    <string name="card_not_supported">Card not support</string>
    <string name="missing_mandatory_data">Missing mandatory data</string>
    <string name="card_blocked_or_no_evm_apps">Card blocked or no EMV apps</string>
    <string name="invalid_icc_data">Invalid ICC data</string>
    <string name="condition_not_statisfied">Condition of use not satisfied</string>
    <string name="power_on_nfc">Power on NFC</string>
    <string name="power_off_nfc">Power off NFC</string>
    <string name="data_exchange">Data exchange</string>
    <string name="power_on_nfc_success">Power on NFC Success</string>
    <string name="power_on_nfc_failed">Power on NFC Failed</string>
    <string name="power_off_nfc_success">Power off NFC Success</string>
    <string name="power_off_nfc_failed">Power off NFC Failed</string>
    <string name="data_received">Data received:</string>
    <string name="data_length">Data length:</string>
    <string name="data_exchange_failed">Data exchange failed</string>
    <string name="response">Response:</string>
    <string name="get_emv_card_data">Get EMV Data</string>
    <string name="emv_card_data_result">EMV card data result:</string>
    <string name="emv_card_data_failed">Get EMV card data failed</string>
    <string name="cvv">CVV2</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
</resources>