<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cvvEditText"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/setButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/confirm" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/cancel" 
            android:visibility="visible"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/cvvEditText"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="number">

        <requestFocus />
    </EditText>

</RelativeLayout>