<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/llLogin"
    tools:context="mx.digitalcoaster.bbva_ingenico.activities.LoginActivity"
    android:background="@color/blue_celeste">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/mainimg"
            android:scaleType="centerCrop"
            android:src="@mipmap/mainimg" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:scaleType="centerCrop"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@mipmap/logompsbbva2" />


    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/line"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/aqua"
            android:textSize="15dp"
            android:text="USUARIO"/>

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_tu_correo"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textColor="#FFF"
            android:textColorHint="@color/dark_grey"
            app:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/aqua"
            android:textSize="15dp"

            android:text="CONTRASEÑA"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/ingresa_tu_contrase_a"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#FFF"
            android:textColorHint="@color/dark_grey"
            app:backgroundTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/accessButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:textColor="@color/white"
            android:text="INGRESAR"
            android:textSize="18dp"
            android:background="@drawable/button3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:scaleX="1.8"
            android:scaleY="1.8"
            android:src="@mipmap/logobbva"/>


    </LinearLayout>

</LinearLayout>


